--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,11 @@ environment:
   sdk: ">=2.18.0 <4.0.0"
   flutter: ">=1.20.0"
 
-
 dependencies:
   flutter:
     sdk: flutter
   json_annotation: ^4.8.0
+  package_info_plus: null
 
 dev_dependencies:
   build_runner: ^2.4.4
